--- a/point-net/check-gpu-device.ipynb
+++ b/point-net/check-gpu-device.ipynb
@@ -5,23 +5,23 @@
    "execution_count": 1,
    "id": "af2971ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\binwe\\anaconda3\\envs\\tensorflow26_p39\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "import glob\n",
-    "import trimesh\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "tf.random.set_seed(1234)"
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ec7c418f",
    "metadata": {},
    "outputs": [
@@ -29,20 +29,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPUs Available:  [PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n"
+      "GPUs Available:  [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
    ],
    "source": [
-    "# Use hardware accelerator for training\n",
-    "physical_devices = tf.config.experimental.list_physical_devices()\n",
+    "## Installation Guide https://www.tensorflow.org/install/pip?hl=en\n",
+    "physical_devices = tf.config.list_physical_devices(\"GPU\")\n",
     "print(\"GPUs Available: \", physical_devices)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb067d14",
+   "id": "a5aa32ce",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
