--- a/point-net/check-gpu-device.ipynb
+++ b/point-net/check-gpu-device.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "af2971ef",
+   "execution_count": 2,
+   "id": "5a7fa444",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\binwe\\anaconda3\\envs\\tensorflow26_p39\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ec7c418f",
+   "execution_count": 3,
+   "id": "cfada5eb",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5aa32ce",
+   "id": "fa7c5c7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -50,9 +41,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conda_tensorflow2_p38",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow2_p38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -64,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
