--- a/point-net/point-net-classification.ipynb
+++ b/point-net/point-net-classification.ipynb
@@ -1,9 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d4816a0b",
+   "metadata": {},
+   "source": [
+    "### Library Explanation\n",
+    "\n",
+    "| Name | Description|\n",
+    "|---|---|\n",
+    "| sys | System-specific parameters and functions |\n",
+    "| sys.path.insert(0, './src') | Adding the python scripts in \"./src\" folder to system env variable |\n",
+    "| os | Miscellaneous operating system interfaces |\n",
+    "| Tensorflow | TensorFlow provides a collection of workflows to develop and train models using Python or JavaScript, and to easily deploy in the cloud, on-prem, in the browser, or on-device no matter what language you use |\n",
+    "| matplotlib | Matplotlib is a comprehensive library for creating static, animated, and interactive visualizations in Python. Matplotlib makes easy things easy and hard things possible |\n",
+    "\n",
+    "#### DataSetsLoader\n",
+    "Self-defined class for downloading and processing the point cloud datasets. Defined in ./src/DataSetsLoader.py\n",
+    "\n",
+    "#### PointNetFactory\n",
+    "Self-defined class for creating the PointNet model. Defined in ./src/PointNetFactory.py"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3623c404",
+   "execution_count": 3,
+   "id": "742504e2",
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +33,8 @@
      "output_type": "stream",
      "text": [
       "Looking in indexes: https://pypi.org/simple, https://pip.repos.neuron.amazonaws.com\n",
-      "Collecting trimesh\n",
-      "  Downloading trimesh-3.13.5-py3-none-any.whl (660 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m660.9/660.9 KB\u001b[0m \u001b[31m28.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /home/ec2-user/anaconda3/envs/tensorflow2_p38/lib/python3.8/site-packages (from trimesh) (1.20.3)\n",
-      "Installing collected packages: trimesh\n",
-      "Successfully installed trimesh-3.13.5\n",
+      "Requirement already satisfied: trimesh in /home/ec2-user/anaconda3/envs/tensorflow2_p38/lib/python3.8/site-packages (3.13.5)\n",
+      "Requirement already satisfied: numpy in /home/ec2-user/anaconda3/envs/tensorflow2_p38/lib/python3.8/site-packages (from trimesh) (1.20.3)\n",
       "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2.2 is available.\n",
       "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/tensorflow2_p38/bin/python -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
       "\u001b[0m"
@@ -25,7 +43,6 @@
    ],
    "source": [
     "!pip install trimesh\n",
-    "\n",
     "# importing sys\n",
     "import sys\n",
     "# adding src to the system path\n",
@@ -40,11 +57,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5086418",
+   "cell_type": "markdown",
+   "id": "983e3433",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Definition of the Global Variables\n",
+    "* NUM_POINTS: The sampling rate for each point cloud in the dataset\n",
+    "* NUM_CLASSES: The number of total classes in the dataset. ex. ModelNet10 has 10 classes.\n",
+    "* NUM_POINT_AXIS: In each point cloud, we only have x,y,z, so there are 3 axis. If we add RGB into the point cloud, then we have x,y,z,r,g,b, which is 6 axis\n",
+    "* BATCH_SIZE: The number of data in each training batch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d14e75ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPUs Available:  [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    }
+   ],
    "source": [
     "# Global variables\n",
     "NUM_POINTS = 2048\n",
@@ -61,19 +98,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5454767f",
+   "id": "3037e7fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from http://3dvision.princeton.edu/projects/2014/3DShapeNets/ModelNet10.zip\n",
+      "473407488/473402300 [==============================] - 17s 0us/step\n",
+      "473415680/473402300 [==============================] - 17s 0us/step\n",
+      "processing class: bathtub\n",
+      "processing class: bed\n",
+      "processing class: chair\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Datasets\n",
-    "datasets_loader = DataSetsLoader()\n",
+    "datasets_loader = DataSetsLoader(use_internet=True)\n",
     "train_points, test_points, train_labels, test_labels, CLASS_MAP = datasets_loader.transform_to_tensorflow_dataset()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80f60826",
+   "id": "8c0e3477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c111508",
+   "id": "7916b612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fc2b5ea",
+   "id": "fdc2fdb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92645fdf",
+   "id": "d3b969c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9710c1",
+   "id": "4602344f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4f2ccd",
+   "id": "d3ce1507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +234,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4ab29e9",
+   "id": "95b1fa28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = test_dataset\n",
+    "total_count = 0\n",
+    "correct_count = 0\n",
+    "\n",
+    "for element in dataset.as_numpy_iterator():\n",
+    "    points = element[0]\n",
+    "    labels = element[1]\n",
+    "    pred = model.predict(points)\n",
+    "    pred = tf.math.argmax(pred, -1)\n",
+    "    for index, point in enumerate(points):\n",
+    "        pred = model.predict(points)\n",
+    "        pred = tf.math.argmax(pred, -1)\n",
+    "        total_count += 1\n",
+    "        if labels[index] == pred[index]:\n",
+    "            correct_count += 1\n",
+    "            \n",
+    "accuracy  = correct_count / total_count\n",
+    "print(\"Accuracy  is {}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f158ae64",
    "metadata": {},
    "outputs": [],
    "source": []
