--- a/point-net/predict_modelnet.ipynb
+++ b/point-net/predict_modelnet.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b89080be",
+   "id": "415fc178",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9565c2e6",
+   "id": "e96bcd30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "47a5c1c3",
+   "id": "3a1f05d7",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "e72ef3f7",
+   "id": "abb95abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "1c000161",
+   "id": "ad46fc5e",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd907eb",
+   "id": "d4705026",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -143,9 +143,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conda_tensorflow2_p38",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow2_p38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
